fix spacing

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: "Karla", sans-serif;
-  margin: 0.3125em 0 0 0;
+  margin: 0;
   background-color: #E5E5E5;
   /* justify-content: center;  */
   /* /* display: flex; */
